- Errors for bad symbols are now handled correctly, and throw an error message - Changed required toolbox to be fixed to 1.*

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "require": {
     "php": ">=7.4.0",
-    "ingelby/toolbox": "dev-master"
+    "ingelby/toolbox": "1.*"
   },
   "require-dev": {
   },
